cmake_minimum_required(VERSION 2.8)

##########################################
############ test makero ########
##########################################

set(CMAKE_CXX_COMPILER /usr/bin/c++)
#set(CMAKE_C_COMPILER /usr/bin/c)
set(CMAKE_CXX_FLAGS ${CMAKE_CSS_FLAGS} "-fPIC")

if( CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR )

set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})

if( SOURCE_DIR STREQUAL BINARY_DIR AND NOT MSVC_IDE )
  message(FATAL_ERROR "In-source builds are not allowed. CMake would overwrite "
"the makefiles distributed with LLVM. Please create a directory and run cmake "
"from there, passing the path to this source directory as the last argument. "
"This process created the file `CMakeCache.txt' and the directory "
"`CMakeFiles'. Please delete them.")
endif()


#set ( CMAKE_CXX_COMPILER c++ )
set(CMAKE_CXX_FLAGS "-g -std=c++11  ")
#set(CMAKE_CXX_FLAGS "-g -Wall -Wextra -pedantic -Weffc++ ")

############## set path #############
ADD_DEFINITIONS("-std=c++1y")

set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
find_package(Threads REQUIRED)
if(CMAKE_USE_PTHREADS_INIT)
  set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-lpthread")

endif()

set(warnings "-w")

##### disable specific warning
####ADD_DEFINITIONS("-Wno-redeclared-class-member")

if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "gnu" )
    set(warnings "-w")
endif()

#### for do not warning for deprecated
ADD_DEFINITIONS("-Wno-deprecated")
set(DEV_DIR "/home/jojeho/dev")

##########################################
############ setting this project ########
##########################################
include_directories("${PRJ_ROOT_DIR}/")

include_directories("${DEV_DIR}/src/boost_1_61_0/")
link_directories("${DEV_DIR}/src/boost_1_61_0/stage/lib")

include_directories("${DEV_DIR}/prj2/jeho/src/")
include_directories("usr/include/")

LINK_LIBRARIES(boost_system)	

#################### add sub directory ########
##############################################

add_subdirectory(src)
endif()

